cambios en el parrafo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Este es un párrafo
+        Este es un párrafo de prueba. Configuré github
     </p>
 </body>
 </html>
